[feat] additions for character, cloudinary, home page
